--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ivan Dario Villa Ramirez <trezegue55@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.5.1",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongoose": "^4.9.5"
